Fixed a Spinner layout with it not working on larger devices, and themed the spinner. 10/10 would theme again

--- a/AndroidScout/app/src/main/res/layout/activity_main.xml
+++ b/AndroidScout/app/src/main/res/layout/activity_main.xml
@@ -429,8 +429,7 @@
                     android:layout_marginRight="8dp"
                     android:layout_weight="1"
                     android:background="@drawable/back"
-                    android:focusable="false"
-                    android:theme="@style/mySpinnerItemStyle" />
+                    android:focusable="false" />
 
             </LinearLayout>
 
