--- a/AndroidScout/app/src/main/res/layout/spinner_layout.xml
+++ b/AndroidScout/app/src/main/res/layout/spinner_layout.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:textColor="@color/my_spinner_text_color"
+    android:background="@drawable/back"
     android:paddingStart="?android:attr/listPreferredItemPaddingStart"
     android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
     android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
