--- a/AndroidScout/app/src/main/res/layout/activity_connect_and_send.xml
+++ b/AndroidScout/app/src/main/res/layout/activity_connect_and_send.xml
@@ -48,8 +48,8 @@
         android:layout_marginTop="8dp" />
 
     <ScrollView
-        android:layout_width="376dp"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:paddingTop="100dp"
