--- a/AndroidScout/app/src/main/res/drawable/border_normal_bluetooth_on.xml
+++ b/AndroidScout/app/src/main/res/drawable/border_normal_bluetooth_on.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
     <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
         <solid android:color="#4245f4" />
-        <stroke android:width="1dip" android:color="#FF6E00"/>
+        <stroke android:width="1dip" android:color="@color/object_border"/>
 
         <!--<solid android:color="#000000" />
         <stroke android:width="1dip" android:color="#9900EE"/> -->
