--- a/AndroidScout/app/src/main/res/drawable/border_pressed_bluetooth_on.xml
+++ b/AndroidScout/app/src/main/res/drawable/border_pressed_bluetooth_on.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
     <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-        <solid android:color="#FF6E00" />
+        <solid android:color="@color/object_border" />
         <stroke android:width="1dip" android:color="#4245f4"/>
     </shape>
