--- a/AndroidScout/app/src/main/res/values/styles.xml
+++ b/AndroidScout/app/src/main/res/values/styles.xml
@@ -12,10 +12,13 @@
         -->
 
         <!-- Custom Dark Theme -->
-        <item name="colorPrimary">#FFFFFF</item>
+        <!--<item name="colorPrimary">#FFFFFF</item>
         <item name="colorPrimaryDark">#000000</item>
-        <item name="colorAccent">#FF6E00</item>
+        <item name="colorAccent">#FF6E00</item>-->
 
+        <item name="colorPrimary">#FFFFFF</item>
+        <item name="colorPrimaryDark">#9999FF</item>
+        <item name="colorAccent">#FF00AA</item>
 
     </style>
 </resources>
